dfir_rs/tests/snapshots/surface_lattice_bimorphism_persist_insertion__cartesian_product_multi_tick_tee@graphvis_dot.snap
---
source: dfir_rs/tests/surface_lattice_bimorphism_persist_insertion.rs
expression: df.meta_graph().unwrap().to_dot(cfg)
---
digraph {
    node [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace", style=filled];
    edge [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace"];
    n1v1 [label="(n1v1) source_stream(lhs_recv)", shape=invhouse, fillcolor="#88aaff"]
    n2v1 [label="(n2v1) map(SetUnionSingletonSet::new_from)", shape=invhouse, fillcolor="#88aaff"]
    n3v1 [label="(n3v1) state::<'static, SetUnionHashSet<u32>>()", shape=house, fillcolor="#ffff88"]
    n4v1 [label="(n4v1) source_stream(rhs_recv)", shape=invhouse, fillcolor="#88aaff"]
    n5v1 [label="(n5v1) map(SetUnionSingletonSet::new_from)", shape=invhouse, fillcolor="#88aaff"]
    n6v1 [label="(n6v1) state::<'static, SetUnionHashSet<u32>>()", shape=house, fillcolor="#ffff88"]
    n7v1 [label="(n7v1) tee()", shape=house, fillcolor="#ffff88"]
    n8v1 [label="(n8v1) for_each(|x| println!(\"tee: {:?}\", x))", shape=house, fillcolor="#ffff88"]
    n9v1 [label="(n9v1) null()", shape=house, fillcolor="#ffff88"]
    n10v1 [label="(n10v1) null()", shape=house, fillcolor="#ffff88"]
    n11v1 [label="(n11v1) lattice_bimorphism(CartesianProductBimorphism::<HashSet<_>>::default(), lhs, rhs)", shape=invhouse, fillcolor="#88aaff"]
    n12v1 [label="(n12v1) lattice_reduce()", shape=invhouse, fillcolor="#88aaff"]
    n13v1 [label="(n13v1) for_each(|x| out_send.send(x).unwrap())", shape=house, fillcolor="#ffff88"]
    n14v1 [label="(n14v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n15v1 [label="(n15v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n16v1 [label="(n16v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n2v1 -> n3v1
    n1v1 -> n2v1
    n5v1 -> n6v1
    n4v1 -> n5v1
    n6v1 -> n7v1 [label="items"]
    n7v1 -> n8v1
    n3v1 -> n9v1 [label="state"]
    n6v1 -> n10v1 [label="state"]
    n3v1 -> n14v1 [label="items"]
    n7v1 -> n15v1
    n12v1 -> n13v1
    n11v1 -> n16v1
    n14v1 -> n11v1 [label="0"]
    n15v1 -> n11v1 [label="1"]
    n16v1 -> n12v1 [color=red]
    n3v1 -> n11v1 [color=red]
    n6v1 -> n11v1 [color=red]
    subgraph sg_1v1 {
        cluster=true
        fillcolor="#dddddd"
        style=filled
        label = "sg_1v1"
        n9v1
        subgraph sg_1v1_var_lhs {
            cluster=true
            label="var lhs"
            n1v1
            n2v1
            n3v1
        }
    }
    subgraph sg_2v1 {
        cluster=true
        fillcolor="#dddddd"
        style=filled
        label = "sg_2v1"
        n8v1
        n10v1
        subgraph sg_2v1_var_rhs {
            cluster=true
            label="var rhs"
            n4v1
            n5v1
            n6v1
        }
        subgraph sg_2v1_var_rhs_tee {
            cluster=true
            label="var rhs_tee"
            n7v1
        }
    }
    subgraph sg_3v1 {
        cluster=true
        fillcolor="#dddddd"
        style=filled
        label = "sg_3v1"
        subgraph sg_3v1_var_my_join {
            cluster=true
            label="var my_join"
            n11v1
        }
    }
    subgraph sg_4v1 {
        cluster=true
        fillcolor="#dddddd"
        style=filled
        label = "sg_4v1"
        subgraph sg_4v1_var_my_join {
            cluster=true
            label="var my_join"
            n12v1
            n13v1
        }
    }
}
